[gd_scene load_steps=14 format=3 uid="uid://wuh44imlcxym"]

[ext_resource type="FontFile" uid="uid://dn01r48g8bq3y" path="res://asset/fonts/ProtestRevolution-Regular.ttf" id="1_71gyj"]
[ext_resource type="Shader" path="res://ui/load_window/SelectLoadData.gdshader" id="1_hivab"]
[ext_resource type="Script" path="res://ui/load_window/save_file_container.gd" id="2_nkc7w"]
[ext_resource type="Texture2D" uid="uid://d05im41paldql" path="res://asset/icon.svg" id="2_ydkpp"]
[ext_resource type="Texture2D" uid="uid://bqlqmtyx20utl" path="res://asset/ui/Icon_X.png" id="4_1ctd5"]
[ext_resource type="Texture2D" uid="uid://dunudmcl51vxs" path="res://asset/ui/Icon_Trash.png" id="6_43alo"]
[ext_resource type="Texture2D" uid="uid://dewanqyare4x" path="res://asset/ui/Icon_Small_WhiteOutline_Check.png" id="7_7mcvf"]

[sub_resource type="Theme" id="Theme_w5j34"]
default_font = ExtResource("1_71gyj")
Label/fonts/font = ExtResource("1_71gyj")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lcg07"]
bg_color = Color(0.647059, 0.670588, 0.717647, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ca2b"]
size = Vector2(320, 230)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0t2k"]
bg_color = Color(0.368627, 0.411765, 0.494118, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6p5a5"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rkhj1"]
shader = ExtResource("1_hivab")
shader_parameter/corner_radius = 35.0
shader_parameter/topRightCorner = false
shader_parameter/topLeftCorner = false
shader_parameter/bottomRightCorner = true
shader_parameter/bottomLeftCorner = true

[node name="SaveFileContainer" type="PanelContainer" node_paths=PackedStringArray("loadingTexture", "playTimeLabel", "gameDoneProcentLabel")]
custom_minimum_size = Vector2(315, 200)
offset_right = 316.0
offset_bottom = 229.0
focus_mode = 2
theme = SubResource("Theme_w5j34")
theme_override_styles/panel = SubResource("StyleBoxFlat_lcg07")
script = ExtResource("2_nkc7w")
loadingTexture = NodePath("VBoxContainer/LoadImageContainer/LoadingScreen1")
playTimeLabel = NodePath("VBoxContainer/Header/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/playtimeLabel")
gameDoneProcentLabel = NodePath("VBoxContainer/Header/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/completedLabel")

[node name="StartGameTouchButton" type="TouchScreenButton" parent="."]
position = Vector2(159, 114)
shape = SubResource("RectangleShape2D_2ca2b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Header"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n0t2k")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Header/PanelContainer"]
layout_mode = 2

[node name="LoadCount" type="MarginContainer" parent="VBoxContainer/Header/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Header/PanelContainer/HBoxContainer/LoadCount"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_6p5a5")

[node name="Label" type="Label" parent="VBoxContainer/Header/PanelContainer/HBoxContainer/LoadCount/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "1"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Header/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Header/PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Header/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="completedLabel" type="Label" parent="VBoxContainer/Header/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "20 %"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Header/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="playtimeLabel" type="Label" parent="VBoxContainer/Header/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "1:20:25"

[node name="LoadImageContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="LoadingScreen1" type="TextureRect" parent="VBoxContainer/LoadImageContainer"]
material = SubResource("ShaderMaterial_rkhj1")
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
texture = ExtResource("2_ydkpp")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = -10
theme_override_constants/margin_right = 15

[node name="deleteButton" type="TextureButton" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
action_mode = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/deleteButton"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = -26.0
offset_top = -12.0
offset_right = 34.0
offset_bottom = 48.0
texture = ExtResource("4_1ctd5")
expand_mode = 1

[node name="reallyDeleteContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="reallyDeleteContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="reallyDeleteContainer/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("6_43alo")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="reallyDeleteContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 100

[node name="yesButton" type="TextureButton" parent="reallyDeleteContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture_normal = ExtResource("7_7mcvf")
texture_pressed = ExtResource("7_7mcvf")
texture_hover = ExtResource("7_7mcvf")
ignore_texture_size = true
stretch_mode = 0

[node name="noButton" type="TextureButton" parent="reallyDeleteContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_1ctd5")
texture_pressed = ExtResource("4_1ctd5")
texture_hover = ExtResource("4_1ctd5")
ignore_texture_size = true
stretch_mode = 0

[connection signal="released" from="StartGameTouchButton" to="." method="_on_start_game_touch_button_released"]
[connection signal="pressed" from="MarginContainer/deleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="reallyDeleteContainer/VBoxContainer/HBoxContainer/yesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="reallyDeleteContainer/VBoxContainer/HBoxContainer/noButton" to="." method="_on_no_button_pressed"]
